tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/positive/unreserved-predecessor-identifiers.wyst
module syntax.unreserved_identifiers

fn probe(case: u64, switch: u64, thread_local: u64) -> u64 {
  return case + switch + thread_local
}
