tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/removed-null-literal.wyst
module removed_null_literal

fn bad() -> @u8 {
    return null
}
